Switched source dist -> build lol

--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title></title>
-</head>
-<body class="noselect">
-    <section id="root">
-    </section>
-<script type="text/javascript" src="bundle.217cd9aea7e0ba58234f.js"></script></body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><title>React App</title><link href="/static/css/main.ce2f43eb.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.a8e488c6.js"></script></body></html>
