--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta charset="utf-8">
+    <noscript>Enable JS to view this page</noscript>
+    <meta name="theme-color" content="#6666a0">
     <title></title>
 </head>
 <body class="noselect">
